# REPO

./: .gitignore  CMakeLists.txt  PROJECT_CONTEXT.md  README.md
UI_tests/: ARCHITECTURE.md  README.md  package-lock.json  package.json  playwright.config.ts
UI_tests/tests/: 00_navigation.spec.ts  01_status.spec.ts  02_elements_put_get_matrix.spec.ts  03_queries.spec.ts  04_store.spec.ts  05_examples_logs.spec.ts  06_bitmaps.spec.ts  07_explorer.spec.ts  08_api_contract.spec.ts  09_schema_explorer.spec.ts  10_assoc_wordnet.spec.ts  11_northwind_data_vs_bitsets.spec.ts  _helpers.ts  smoke.spec.ts
cli/: CMakeLists.txt  er_cli.cpp
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  CODING_STANDARD.md  TODO.md  redis-schema.md
examples/basic_flags/: README.md  example.json
examples/basic_seed/: README.md  example.json
examples/bitmap_groups/: README.md  example.json
examples/docs/: 00_reset.sh  01_ingest.py  02_query_compare.sh  README.md  example.json
examples/math_universe/: 00_reset.sh  01_ingest.py  02_query_compare.sh  README.md  example.json
examples/multi_namespace_demo/: README.md  example.json
examples/northwind/: 00_get_db.sh  01_ingest.py  02_query_compare.sh  README.md  example.json  schema_bits.json
examples/northwind_compare/: README.md  example.json
examples/northwind_compare/assets/: PLACE_NORTHWIND_SQLITE_HERE.md
examples/query_patterns/: README.md  example.json
gui/: .env.example  .gitignore  ARHITECTURE_GUI.md  GUI_COPY.md  README.md  docker-compose.yml
gui/backend/: Dockerfile  entrypoint.sh  openapi.yaml  requirements.txt
gui/backend/app/: assoc_wordnet.py  bitmaps.py  cli_adapter.py  errors.py  examples.py  main.py  models.py  namespace_discovery.py  namespaces.py  northwind_compare.py  northwind_data.py  northwind_data_bits.py  redis_bits.py  schema_meta.py  settings.py
gui/backend/scripts/: selftest.sh
gui/frontend/: Dockerfile  nginx.conf
gui/frontend/explorer/: index.html  package-lock.json  package.json  vite.config.ts
gui/frontend/explorer/src/: App.tsx  theme.css  (+5 more)
gui/frontend/www/: app.js  index.html  styles.css
gui/presets/: default.env  demo.env  dev.env
gui/presets/default/: bitmaps.json  namespaces.json
include/er/: Element.hpp  Flags4096.hpp  RedisClient.hpp  keys.hpp  result.hpp
include/er_abi/: er_abi.h
python/: test_abi.py
scripts/: smoke_test.sh
src/: Element.cpp  Flags4096.cpp  RedisClient.cpp  er_abi.cpp
tools/: relay_clip.sh  relay_collect.sh
tools/wn_ingest/: README.md  requirements.txt  wordnet_to_bitset.py
ui_e2e/: package-lock.json  package.json  playwright.config.ts
ui_e2e/tests/: _helpers.ts  elements_queries_store.spec.ts  examples_bitmaps_logs.spec.ts  explorer.spec.ts  smoke_navigation.spec.ts
(+3 files in other folders)
